--- a/Practice.html
+++ b/Practice.html
@@ -10,6 +10,7 @@
     </style>
   </head>
   <body>
+    <h1>Heading</h1>
     <button>SignUp</button>
     <p>This is a new line.</p>
     <p>new line</p>
