--- a/javascript.html
+++ b/javascript.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
-<html>
-  <head> </head>
-  <body>
-    <h2>This is a heading.</h2>
-    <p>This is a paragraph.</p>
-    <!-- <p id="para2"></p> -->
-    <script>
-      // document.getElementById("para2").innerHTML = 5 + 5;
-      //   document.write(5 + 6);
-      window.alert(5 + 5);
-    </script>
-  </body>
-</html>
+<script>
+  "use strict";
+  let fruits = ["Apple", "Orange", "Mango"];
+  fruits.shift();
+</script>
